# CDelay

./: .gitignore  CMakeLists.txt
.github/workflows/: build-mac.yml  build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
